--- a/index.html
+++ b/index.html
@@ -16,6 +16,43 @@
     <a href="https://www.gbmg.go.kr/" target="blank" title="문경시청">문경</a>의 아름다운 자연 풍경, 청정지역인 하늘재의 맑은 공기, <strong>별장형 단독주택 <u>힐스카이</u></strong>에서 가족과 함께하는 특별한 추억
     <p>백두대간을 배경으로 두고 있는 최고의 풍경</p> 
     <img src="coding.jpg" width="100%"
-    <p style="margin-top:45px;">산으로 둘러싸인 조용한 곳에서 최고의 힐링</p>
+    <p> style="margin-top:45px;">산으로 둘러싸인 조용한 곳에서 최고의 힐링</p>
+    <p>
+        <div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://web1-c0nchsnwtg.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    </p>
+    <p>
+        <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/5e87599c69e9320caabffb1a/default';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
+    </p>
 </body>
 </html>
