--- a/1.html
+++ b/1.html
@@ -1,58 +1,21 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>문경 하늘재 힐스카이</title>
-<meta charset="utf-8">
-</head>
-
-<body>
-    <h1><a href="index.html">문경 하늘재 힐스카이</a></h1>
+<html lang="ko" dir="ltr">
+  <head>
+    <title>HILLSKY - POOL VILLA</title>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    <h1><a href="index.html">HILLSKY</a></h1>
     <ol>
-        <li><a href="1.html">POOLVILLA</a></li>
-        <li><a href="2.html">SPAVILLA</a></li>
-        <li><a href="3.html">DOGVILLA</a></li>
+    <li><a href="1.html">POOL VILLA</a></li>
+    <li><a href="2.html">SPA VILLA</a></li>
+    <li><a href="3.html">DOG VILLA</a></li>
     </ol>
-    <h2>POOLVILLA</h2>
-    <p>힐스카이 풀빌라는 개별 수영장이 있는 빌라입니다.</p>
-    <p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE?list=PLuHgQVnccGMDZP7FJ_ZsUrdCGH68ppvPb" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </p>
-    <p>
-        <div id="disqus_thread"></div>
-<script>
-
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-/*
-var disqus_config = function () {
-this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-*/
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://web1-c0nchsnwtg.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    </p>
-    <p>
-        <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/5e87599c69e9320caabffb1a/default';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
-    })();
-    </script>
-    <!--End of Tawk.to Script-->
-    </p>
-</body>
+    <h2>POOL VILLA</h2>
+    <p><a href="http://xn--9t4b21gu7gq6j.com/" target="_blank" title="힐스카이 홈페이지">힐스카이</a> A,B동은 개별수영장이 있는 <strong>2층 독채 <u>풀빌라</u></strong>입니다.</p>
+    <p>힐스카이 A,B동은 2층 독채빌라로 1층에는 거실, 주방, 화장실으로, 2층에는 거실, 화장실, 침대방, 온돌방으로 이루어져 있습니다.</p>
+    <img src="pool.jpg" width="50%">
+    <p>수영장은 외부에 있으며 지하수를 사용하고, 규격은 3m x 6m 이며 수심은 1m입니다. 성인용 수영장으로 수영장은 7월 8월에만 운영합니다.</p>
+    <p>바베큐는 각 집마다 외부데크에 개별 바베큐장에서 할 수 있으며, 불판이 포함된 가스그릴과 피크닉테이블이 배치되어 있습니다.</p>
+  </body>
 </html>
