--- a/index.html
+++ b/index.html
@@ -1,58 +1,22 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>문경 하늘재 힐스카이</title>
-<meta charset="utf-8">
-</head>
-
-<body>
-    <h1><a href="index.html">문경 하늘재 힐스카이</a></h1>
+<html lang="ko" dir="ltr">
+  <head>
+    <title>HILLSKY - Welcome</title>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    <h1><a href="index.html">HILLSKY</a></h1>
     <ol>
-        <li><a href="1.html">POOLVILLA</a></li>
-        <li><a href="2.html">SPAVILLA</a></li>
-        <li><a href="3.html">DOGVILLA</a></li>
+    <li><a href="1.html">POOL VILLA</a></li>
+    <li><a href="2.html">SPA VILLA</a></li>
+    <li><a href="3.html">DOG VILLA</a></li>
     </ol>
-    <h2>힐스카이</h2>
-    <a href="https://www.gbmg.go.kr/" target="blank" title="문경시청">문경</a>의 아름다운 자연 풍경, 청정지역인 하늘재의 맑은 공기, <strong>별장형 단독주택 <u>힐스카이</u></strong>에서 가족과 함께하는 특별한 추억
-    <p>백두대간을 배경으로 두고 있는 최고의 풍경</p> 
-    <img src="coding.jpg" width="100%"
-    <p> style="margin-top:45px;">산으로 둘러싸인 조용한 곳에서 최고의 힐링</p>
-    <p>
-        <div id="disqus_thread"></div>
-<script>
-
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-/*
-var disqus_config = function () {
-this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-*/
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://web1-c0nchsnwtg.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    </p>
-    <p>
-        <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/5e87599c69e9320caabffb1a/default';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
-    })();
-    </script>
-    <!--End of Tawk.to Script-->
-    </p>
-</body>
+    <h2>HILLSKY</h2>
+    <p><a href="http://xn--9t4b21gu7gq6j.com/" target="_blank" title="힐스카이 홈페이지">힐스카이</a>는 경상북도 문경시에 위치한 2층 독채 펜션입니다.</p>
+    <p>힐스카이는 풀빌라 A,B / 스파빌라 C,D / 애견동반가능빌라 E,F 총 6개의 빌라로 이루어져 있습니다.</p>
+    <img src="hillsky.jpg" width="50%">
+    <p>경상북도 문경시 문경읍 관음길 456-10 힐스카이</p>
+    <p>문의 : 010-7725-7426</p>
+    <p>문경 하늘재의 맑은 공기와 수려한 경치를 즐길 수 있습니다.</p>
+  </body>
 </html>
